--- a/index.html
+++ b/index.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
 
-<head>
-
-
-</head>
-
-<body>
-  
-  <section>
-
-  </section>
-
-  <section>
-
-  </section>
-
-  <footer>
-
-</body>
-
+  </body>
 </html>
